--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,7 @@
         app:layout_constraintVertical_bias="0.594" />
 
     <Button
-        android:id="@+id/btnregister"
+        android:id="@+id/btnregister1"
         android:layout_width="247dp"
         android:layout_height="58dp"
         android:background="@drawable/boder_register"
