--- a/app/src/main/res/layout/activity_finsh.xml
+++ b/app/src/main/res/layout/activity_finsh.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity_finsh">
 
-    <ImageView
-        android:id="@+id/imageView13"
+    <ImageButton
+        android:id="@+id/imghappy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -18,8 +18,8 @@
         app:layout_constraintVertical_bias="0.033"
         app:srcCompat="@drawable/group" />
 
-    <ImageView
-        android:id="@+id/imageView14"
+    <ImageButton
+        android:id="@+id/imgsad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,8 +30,8 @@
         app:layout_constraintVertical_bias="0.498"
         app:srcCompat="@drawable/group_4" />
 
-    <ImageView
-        android:id="@+id/imageView15"
+    <ImageButton
+        android:id="@+id/imgnormal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -59,8 +59,8 @@
 
     <ImageView
         android:id="@+id/imageView16"
-        android:layout_width="729dp"
-        android:layout_height="63dp"
+        android:layout_width="849dp"
+        android:layout_height="71dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
